# Py12_HW_9

./: author_to_scrap.html  main.py  pyproject.toml  quotes_to_scrap.html
